# SparseVector

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  vectorSumExample.cpp
src/: basics.hpp  indexlist.cpp  indexlist.hpp  vector.cpp  vector.hpp
src/indexlist/: contains.cpp  contains.hpp  equals.cpp  equals.hpp  hassameindextype.cpp  hassameindextype.hpp  head.cpp  head.hpp  indextype.cpp  indextype.hpp  insert_index.cpp  insert_index.hpp  intersection.cpp  intersection.hpp  isempty.cpp  isempty.hpp  join.cpp  join.hpp  length.cpp  length.hpp  pop_front.cpp  pop_front.hpp  push_back.cpp  push_back.hpp  push_front.cpp  push_front.hpp  relativeindex.cpp  relativeindex.hpp  tostring.cpp  tostring.hpp
test/: CMakeLists.txt  contains.cpp  equals.cpp  insertindex.cpp  vector.cpp  vectorTests.cpp
